cmake_minimum_required(VERSION 3.18)

option(BUILD_TESTS "Builds tests" ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER _Cmake)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/output/debug/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/output/debug/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/output/debug/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/output/release/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/output/release/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/output/release/lib)

project(K4004 LANGUAGES CXX)

add_subdirectory(third_party)

set(TARGET_ASSEMBLER_NAME assembler_lib)
add_subdirectory(assembler)

#set(TARGET_EMULATOR_NAME emulator_lib)
#add_subdirectory(emulator)

#set(TARGET_APP_NAME K4004_app)
#set(K4004_APP_SOURCES
#    ${CMAKE_CURRENT_SOURCE_DIR}/app/app.cpp
#    ${CMAKE_CURRENT_SOURCE_DIR}/app/app.hpp
#    ${CMAKE_CURRENT_SOURCE_DIR}/app/main.cpp
#    ${CMAKE_CURRENT_SOURCE_DIR}/app/olc/olcPixelGameEngine.cpp
 #   ${CMAKE_CURRENT_SOURCE_DIR}/app/olc/olcPixelGameEngine.h
#)

#add_executable(${TARGET_APP_NAME} ${K4004_APP_SOURCES})
#source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/app PREFIX source FILES ${K4004_APP_SOURCES})

#target_link_libraries(${TARGET_APP_NAME} PRIVATE
#    ${TARGET_EMULATOR_NAME}
#    ${TARGET_ASSEMBLER_NAME}
#)

#if(MSVC)
#    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${TARGET_APP_NAME})
#    set_target_properties(${TARGET_APP_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
#endif()
