set(K4004_ASSEMBLER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/assembler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/assembler.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/global.hpp
)

add_library(${TARGET_ASSEMBLER_NAME} STATIC ${K4004_ASSEMBLER_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${K4004_ASSEMBLER_SOURCES})

target_include_directories(${TARGET_ASSEMBLER_NAME} PUBLIC
    ${CMAKE_SOURCE_DIR}
)

set_target_properties(${TARGET_ASSEMBLER_NAME} PROPERTIES FOLDER assembler)
