set(TARGET_ASSEMBLER_TESTS_NAME assembler_tests)

set(K4004_ASSEMBLER_TEST_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/assembler_internals_tests.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/assembler_tests.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

add_executable(${TARGET_ASSEMBLER_TESTS_NAME} ${K4004_ASSEMBLER_TEST_SOURCES})
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${K4004_ASSEMBLER_TEST_SOURCES})

target_compile_definitions(${TARGET_ASSEMBLER_TESTS_NAME} PRIVATE
    K4004_TESTS
)

target_link_libraries(${TARGET_ASSEMBLER_TESTS_NAME} PRIVATE
    gtest
    ${TARGET_ASSEMBLER_NAME}
)

set_target_properties(${TARGET_ASSEMBLER_TESTS_NAME} PROPERTIES FOLDER assembler)

if(MSVC)
	set_target_properties(${TARGET_ASSEMBLER_TESTS_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif()
