set(K4004_EMULATOR_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/cycle_types.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cycle_types.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4002.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4002.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4003.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4003.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4004.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4004.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MCS4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MCS4.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rom.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rom.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/types.hpp
)

add_library(${TARGET_EMULATOR_NAME} STATIC ${K4004_EMULATOR_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${K4004_EMULATOR_SOURCES})

target_include_directories(${TARGET_EMULATOR_NAME} PUBLIC
    ${CMAKE_SOURCE_DIR}
)

target_link_libraries(${TARGET_EMULATOR_NAME} PRIVATE
    ${TARGET_ASSEMBLER_NAME}
)

set_target_properties(${TARGET_EMULATOR_NAME} PROPERTIES FOLDER emulator)
