set(K4004_EMULATOR_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/emulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/emulator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4004.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/K4004.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ram.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ram.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rom.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/rom.hpp
    ${SHARED_DIR}/source/whitebox.hpp
)

add_library(${TARGET_EMULATOR_NAME} STATIC ${K4004_EMULATOR_SOURCES})
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${K4004_EMULATOR_SOURCES})

target_include_directories(${TARGET_EMULATOR_NAME} PUBLIC
    ${CMAKE_SOURCE_DIR}
)

target_link_libraries(${TARGET_EMULATOR_NAME} PRIVATE
    ${TARGET_ASSEMBLER_NAME}
)

set_target_properties(${TARGET_EMULATOR_NAME} PROPERTIES FOLDER emulator)
