set(TARGET_EMULATOR_TESTS_NAME emulator_tests)

set(K4004_EMULATOR_TEST_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

add_executable(${TARGET_EMULATOR_TESTS_NAME} ${K4004_EMULATOR_TEST_SOURCES})
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${K4004_EMULATOR_TEST_SOURCES})

target_compile_definitions(${TARGET_EMULATOR_TESTS_NAME} PRIVATE
    K4004_TESTS
)

target_link_libraries(${TARGET_EMULATOR_TESTS_NAME} PRIVATE
    gtest
    ${TARGET_EMULATOR_NAME}
)

set_target_properties(${TARGET_EMULATOR_TESTS_NAME} PROPERTIES FOLDER emulator)

if(MSVC)
	set_target_properties(${TARGET_EMULATOR_TESTS_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endif()
